# learning-ai

./: .gitignore  pyproject.toml
common/: computer_vision.py  cv_drawing.py  utils.py
src/001_basics/: main.py
src/002_digit_recognition/: main.py
src/003_emotion_recognition/: emotions.py  main.py
src/004_furniture_recognition/: .gitignore  furniture_recognition.py  main.py
src/005_hand_gestures/: hand_gestures.py  main.py
src/006_2d_room_layout_from_point_cloud/: .gitignore  README.md  main.py
