[project]
name = "learning-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "gym-super-mario-bros>=7.4.0",
    "gymnasium>=1.2.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1.3",
    "tensordict>=0.10.0",
    "torch>=2.9.0",
    "torchrl>=0.10.1",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.227",
]

[dependency-groups]
dev = [
    "scipy-stubs>=1.17.0.2",
]
